variables.RunFour.scala.error
Compilation error:
RunFour:4: error: not found: value pickupBAggle
    pickupBAggle()
    ^