variables.RunFour.scala.code
var x=0
while (x!=0){
  if (isOverBaggle){
    pickupBAggle()
    x = x + 1
  }
  forward()
  
}